# design-paterns

./: .gitignore  README.md
observer/Weather Station/: CMakeLists.txt
observer/Weather Station JS/: index.html  script.js  style.css
observer/Weather Station/lib/Display/: display.cpp  display.h
observer/Weather Station/lib/Weather/: weather.cpp  weather.h
observer/Weather Station/src/: main.cpp
pgsqldb/: .env.example  docker-compose.yml
singleton/: CMakeLists.txt  employee_register.cpp
singleton/lib/: env_extractor.cpp  env_extractor.hpp
singleton/lib/db/: model.hpp
singleton/src/models/: employee.hpp
strategy/store/: CMakeLists.txt  main.cpp
strategy/store/lib/Store/: store.cpp  store.h
